--- a/PositionIn/ProductDetails/PositionIn.PromotionDetailsViewController.xib
+++ b/PositionIn/ProductDetails/PositionIn.PromotionDetailsViewController.xib
@@ -80,7 +80,7 @@
                                         <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="promotionDiscount" translatesAutoresizingMaskIntoConstraints="NO" id="R1p-pj-I6d">
+                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="promotionDiscount" translatesAutoresizingMaskIntoConstraints="NO" id="R1p-pj-I6d">
                                     <rect key="frame" x="11" y="44" width="24" height="22"/>
                                     <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </imageView>
